@@ -3,6 +3,10 @@ Release notes for Agora-Moodle2 (http://agora.xtec.cat)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_moodle2
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- Disabled marsupial as an independent service
+
 Changes 15.07.20
 ---------------------------------------------------------------------------------------
 - Moodle upgraded to from 2.8.7
